--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 myApp/www/build/main.js.map
 myApp/www/build/main.js
 myApp/www/build/main.css
+myApp/www/build/main.js.map
+myApp/www/build/main.js
+myApp/www/build/main.js.map
