--- a/myApp/ionic.config - Copy.json
+++ b/myApp/ionic.config - Copy.json
@@ -1,6 +1,7 @@
 {
   "name": "myApp",
-  "app_id": "31744587",
+  "app_id": "e17dd2dc",
+  "app_id": "31744587"
   "v2": true,
   "typescript": true
 }
